test/part2/success/typage_simple1-1.c


int main(){
	
	int i;
	char c;

	i=5;
	c='5';
	i='c';
	c=5;
}
