test/part2/fail/unic_var.c

int a;
char a;

int main() {}
